# canterlot-api

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  render.yaml
.github/: dependabot.yml  pull_request_template.md
.github/templates/: LICENSE
.github/workflows/: cla.yml  dependabot-auto-merge.yml  dependabot-release.yml  deploy.yml  keep-alive.yml  quality.yml  release-core.yml  release.yml
scripts/: check_imports.py  coverage.py
src/canterlot/: app.py  constants.py  main.py  middleware.py  middlewares.py  pagination.py  types.py  worker.py
src/canterlot/config/: __init__.py  database.py  enums.py  settings.py
src/canterlot/dto/: __init__.py  auth.py  book.py  catalog.py  club.py  invite.py  user.py
src/canterlot/emails/: __init__.py  factories.py  interfaces.py
src/canterlot/emails/clients/: __init__.py  disabled.py  dry_run.py  resend.py
src/canterlot/emails/core/: __init__.py  definitions.py  policy.py  renderer.py  schemas.py
src/canterlot/emails/templates/: base.html.j2  macros.html.j2
src/canterlot/emails/templates/celestia/: approved.html.j2  invite-external.html.j2  invite-internal.html.j2  layout.html.j2  ownership-received.html.j2  verify-email-changed.html.j2  verify-email.html.j2
src/canterlot/emails/templates/luna/: email-changed.html.j2  layout.html.j2  locked-out.html.j2  ownership-reclaimed.html.j2  ownership-transferred.html.j2  password-changed.html.j2  password-reset.html.j2  provider-disconnected.html.j2  provider-linked.html.j2
src/canterlot/emails/templates/spike/: book-decided.html.j2  club-dissolved.html.j2  layout.html.j2  reminder-t0.html.j2  reminder-t1.html.j2  removed.html.j2  role-changed.html.j2  voting-open.html.j2
src/canterlot/emails/webhooks/: __init__.py  handler.py
src/canterlot/exceptions/: __init__.py  auth.py  base.py  book.py  club.py  gateway.py  invite.py  rate_limit.py  user.py
src/canterlot/gateways/: __init__.py
src/canterlot/gateways/auth/: __init__.py  factories.py  interfaces.py
src/canterlot/gateways/auth/clients/: __init__.py  google.py  gravatar.py
src/canterlot/gateways/auth/risc/: __init__.py  google.py
src/canterlot/gateways/books/: __init__.py  factories.py  google.py  interfaces.py
src/canterlot/gateways/links/: __init__.py  factories.py  interfaces.py
src/canterlot/gateways/links/annas/: __init__.py  parser.py  provider.py
src/canterlot/models/: __init__.py  book.py  catalog.py  club.py  enums.py  error.py  invite.py  user.py
src/canterlot/providers/: __init__.py  factories.py  google.py  interfaces.py
src/canterlot/providers/annas/: parser.py  provider.py
src/canterlot/providers/auth/: __init__.py  factories.py  google.py  gravatar.py  interfaces.py
src/canterlot/providers/email/: __init__.py  disabled.py  dry_run.py  factories.py  interfaces.py  resend.py
src/canterlot/providers/risc/: google.py
src/canterlot/repositories/: __init__.py  interfaces.py
src/canterlot/repositories/beanie/: __init__.py  book.py  club.py  database.py  invite.py  user.py
src/canterlot/repositories/redis/: __init__.py  cache.py  repository.py
src/canterlot/routers/: api.py  auth.py  books.py  catalog.py  clubs.py  cookies.py  dependencies.py  errors.py  health.py  invites.py  openapi.py  users.py  webhooks.py
src/canterlot/services/: __init__.py  auth.py  book.py  catalog.py  club.py  dispatch.py  health.py  invite.py  user.py
src/canterlot/utils/: __init__.py  format.py  isbn.py  language.py  logger.py  mirror.py  scoring.py  security.py  slugs.py
tests/: conftest.py  test_app.py  test_middleware.py  test_pagination.py  test_types.py
tests/dto/: test_auth.py  test_book.py  test_catalog.py  test_club.py  test_invite.py  test_user.py
tests/emails/: test_factories.py
tests/emails/clients/: test_disabled.py  test_dry_run.py  test_resend.py
tests/emails/core/: test_renderer.py  test_schemas.py
tests/gateways/auth/: test_factories.py
tests/gateways/auth/clients/: test_google.py  test_gravatar.py
tests/gateways/auth/risc/: test_google.py
tests/gateways/books/: test_factories.py  test_google.py
tests/gateways/links/: test_factories.py
tests/gateways/links/annas/: test_parser.py  test_provider.py
tests/models/: test_book.py  test_catalog.py  test_club.py  test_error.py  test_invite.py  test_user.py
tests/providers/: test_factories.py  test_google.py
tests/providers/annas/: test_parser.py  test_provider.py
tests/providers/auth/: test_factories.py  test_google.py  test_gravatar.py
tests/providers/email/: test_disabled.py  test_dry_run.py  test_factories.py  test_resend.py
tests/providers/risc/: test_google.py
tests/repositories/: conftest.py  test_book.py  test_cache.py  test_club.py  test_database.py  test_invite.py  test_redis.py  test_user.py
tests/routers/: conftest.py  test_auth.py  test_books.py  test_catalog.py  test_clubs.py  test_cookies.py  test_dependencies.py  test_health.py  test_invites.py  test_users.py  test_webhooks.py
tests/services/: conftest.py  test_auth.py  test_book.py  test_catalog.py  test_club.py  test_health.py  test_invite.py  test_user.py
tests/utils/: test_format.py  test_isbn.py  test_language.py  test_mirror.py  test_scoring.py  test_security.py  test_slugs.py
tools/: check_imports.py  clean.py  coverage.py  seed.py  setup.py
