[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CanterlotAPI"
version = "1.0.0"
description = "API for a Book Club management system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }

authors = [{ name = "Alex Beldam Souza", email = "alex.beldam@gmail.com" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "redis>=5.0.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.2.0",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    "httpx>=0.25.0",
    "requests>=2.32.0",
    "langcodes>=3.4.0",
    "language_data>=1.2.0",
    "python-multipart",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "respx>=0.20.0",
    "mypy>=1.5.0",
    "pydantic>=2.5.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
    "pyright>=1.1.400",
    "pytest-describe>=2.2.0",
    "pytest-cov>=4.1.0",
    "xenon>=0.9.0",
    "radon>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["it_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*starlette\\.testclient.*",
    "ignore:.*httpx.*",
    "ignore:.*StarletteDeprecationWarning.*",
    "ignore:.*cannot collect 'self'.*:pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "src/vendor/*"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = '^src/vendor/'

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
extend-exclude = ["src/vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ARG", "B", "UP", "SIM", "RET", "RUF", "PLR"]
ignore = []

[tool.ruff.lint.pylint]
max-branches = 12
max-args = 8
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["PLR2004", "PLR0915", "S101"]
"scripts/*" = ["PLR2004", "PLR0915", "S101"]


[tool.pyright]
include = ["src", "tests"]
ignore = ["src/vendor"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
