[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CanterlotAPI"
version = "0.2.1"
description = "API for a Book Club management system"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "BUSL-1.1" }

authors = [{ name = "Alex Beldam Souza", email = "alex.beldam@gmail.com" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pymongo>=4.6.0",
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "redis>=5.0.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.2.0",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    "langcodes[data]>=3.4.0",
    "python-multipart>=0.0.32",
    "shortuuid>=1.0.13",
    "structlog>=26.1.0",
    "beanie>=2.1.0",
    "beautifulsoup4[lxml]>=4.15.0",
    "brotli>=1.2.0",
    "curl-cffi>=0.15.0",
    "python-slugify>=8.0.4",
    "pydantic-core>=2.46.4",
    "google-auth>=2.56.0",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pyright>=1.1.400",
    "pytest-describe>=2.2.0",
    "pytest-cov>=4.1.0",
    "xenon>=0.9.0",
    "radon>=6.0.0",
    "deptry>=0.25.1",
    "mongomock-motor>=0.0.36",
    "httpx2>=2.5.0",
    "pytest-github-actions-annotate-failures>=0.4.2",
    "testcontainers[mongodb,redis]>=4.14.2",
    "python-semantic-release>=10.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/canterlot"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["it_*"]
asyncio_mode = "auto"
markers = [
    "integration: needs a real MongoDB (via testcontainers/Docker); excluded by default, run with `just test-integration`",
]
filterwarnings = [
    "ignore::curl_cffi.utils.CurlCffiWarning",
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning:testcontainers.mongodb",
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.redis",
]

[tool.coverage.run]
source = ["canterlot"]
omit = [
    "*/__init__.py",
    "*/canterlot/config/settings.py",
    "*/canterlot/config/database.py",
    "*/canterlot/utils/logger.py",
    "*/canterlot/exceptions/*",
]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "canterlot.repositories.beanie.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ARG", "B", "UP", "SIM", "RET", "RUF", "PLR"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pylint]
max-branches = 12
max-args = 8
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["PLR2004", "PLR0915", "PLR0913", "S101"]
"src/canterlot/repositories/beanie/**/*.py" = ["E712"]

[tool.pyright]
include = ["src", "tests", "tools"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
executionEnvironments = [
    { root = "src/canterlot/repositories/beanie", reportUnhashable = false, reportAttributeAccessIssue = false },
]

[tool.deptry]
known_first_party = ["canterlot"]

[tool.deptry.per_rule_ignores]
DEP002 = ["python-multipart", "uvicorn", "brotli"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
allow_zero_version = true
assets = ["LICENSE", "uv.lock"]
build_command = "uv lock"
commit_parser = "conventional"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release."
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "develop"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.remote]
name = "origin"
type = "github"
